added first half of home page markup

--- a/index.html
+++ b/index.html
@@ -9,17 +9,54 @@
 </head>
 
 <body>
-<h1>TEST</h1>
-	<header>
 
+
+	<header class="mainHeader">
+		<div class="wrapper">
+			<div class="mainHeaderNavFlex">
+				<nav class="mainHeaderNav">
+					<ul>
+						<li><a href="#home">HOME</a></li>
+						<li><a href="#about">ABOUT</a></li>
+						<li><a href="#blog">BLOG</a></li>
+						<li><a href="#contact">CONTACT</a></li>
+					</ul>
+				</nav>
+			</div>
+
+			<div class="mainHeaderImageFlex">
+				<h1>sanctuary helpers</h1>
+				<div>
+					<img src="../assets/header-box.png" alt="Two blue velvet chairs, one with a pillow on hardwood floor.">
+				</div>
+			</div>
+		</div>
 	</header>
 
+	<main class="homeMain">
+		<section class="materials">
+			<div class="materialsFlex">
+				<div class="materialsText">
+					<h2>DISCOVERING NEW MATERIALS</h2>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium, repellendus saepe ab numquam cum,
+						aut corrupti rerum itaque consequatur culpa dolores, voluptates ipsam necessitatibus quas.</p>
+					<div class="materialsLink">
+						<a href="#">
+							<h4>FIND OUT MORE</h4>
+						</a>
+					</div>
+				</div>
+				<div class="materialsImage">
+					<img src="../assets/small-box.jpg"
+						alt="Staged living room with a grey couch, abstract painting on the wall behind and a lamp that is turned on.">
+				</div>
+			</div>
 
-	<section>
 
-	</section>
-	
+		</section>
 
+
+	</main>
 
 
 </body>
