finished home and started blog

--- a/index.html
+++ b/index.html
@@ -39,101 +39,107 @@
 
     <main class="homeMain">
       <section class="materials">
-        <div class="materialsFlex">
-          <div class="materialsText">
-            <h2>DISCOVERING NEW MATERIALS</h2>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Praesentium, repellendus saepe ab numquam cum, aut corrupti rerum
-              itaque consequatur culpa dolores, voluptates ipsam necessitatibus
-              quas.
-            </p>
-            <div class="materialsLink">
-              <a href="#">
-                <h4>FIND OUT MORE</h4>
-              </a>
-            </div>
-          </div>
-          <div class="materialsImage">
-            <img
-              src="../assets/small-box.jpg"
-              alt="Staged living room with a grey couch, abstract painting on the wall behind and a lamp that is turned on."
-            />
-          </div>
-        </div>
+       <div class="wrapper">
+       	 <div class="materialsFlex">
+	          <div class="materialsText">
+	            <h2>DISCOVERING NEW MATERIALS</h2>
+	            <p>
+	              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+	              Praesentium, repellendus saepe ab numquam cum, aut corrupti rerum
+	              itaque consequatur culpa dolores, voluptates ipsam necessitatibus
+	              quas.
+	            </p>
+	            <div class="materialsLink">
+	              <a href="#">
+	                <h4>FIND OUT MORE</h4>
+	              </a>
+	            </div>
+	          </div>
+	          <div class="materialsImage">
+	            <img
+	              src="../assets/small-box.jpg"
+	              alt="Staged living room with a grey couch, abstract painting on the wall behind and a lamp that is turned on."
+	            />
+	          </div>
+	        </div>
+       </div>
       </section>
       <section class="mainImages">
-        <div class="mainImagesFlex">
-          <div>
-            <img
-              src="../assets/gallery-image-1.jpg"
-              alt="Green dresser with a brown vase with dried flowers and small framed art."
-            />
-          </div>
-          <div>
-            <img
-              src="../assets/gallery-image-2.jpg"
-              alt="Orange sofa with decorative throw pillows and a brown wooden coffee table with magazines on top."
-            />
-          </div>
-          <div>
-            <img
-              src="../assets/gallery-image-3.jpg"
-              alt="Designer patio chair."
-            />
-          </div>
-        </div>
+       <div class="wrapper">
+       	 <div class="mainImagesFlex">
+	          <div>
+	            <img
+	              src="../assets/gallery-image-1.jpg"
+	              alt="Green dresser with a brown vase with dried flowers and small framed art."
+	            />
+	          </div>
+	          <div>
+	            <img
+	              src="../assets/gallery-image-2.jpg"
+	              alt="Orange sofa with decorative throw pillows and a brown wooden coffee table with magazines on top."
+	            />
+	          </div>
+	          <div>
+	            <img
+	              src="../assets/gallery-image-3.jpg"
+	              alt="Designer patio chair."
+	            />
+	          </div>
+	        </div>
+       </div>
       </section>
       <section class="mainFeatures">
-        <div class="mainFeaturesFlex1">
-          <div class="customizedFlex">
-            <div class="featuresText1">
-              <div class="featuresIcon1">
-                <i class="fas fa-home"></i>
-              </div>
-              <h2>CUSTOMIZED OFFERS</h2>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Delectus, minima cupiditate. Adipisci iusto maxime ea odio
-                consequatur? Optio, autem? Vel!
-              </p>
-            </div>
-            <div class="featuresText2">
-              <div class="featuresIcon2">
-                <i class="fas fa-users"></i>
-              </div>
-              <h2>BLOG</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Impedit rem ex labore animi debitis excepturi iure iusto
-                corporis tempore nobis?
-              </p>
-            </div>
-          </div>
-          <div class="communityFlex">
-            <div class="featuresText3">
-              <div class="featuresIcon3">
-                <i class="fas fa-file"></i>
-              </div>
-              <h2>COMMUNITY</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
-                odio iusto doloremque ad omnis at recusandae nisi pariatur modi
-                cum.
-              </p>
-            </div>
-            <div class="featuresText4">
-              <div class="featuresIcon4">
-                <i class="fas fa-phone"></i>
-              </div>
-              <h2>GET IN TOUCH</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                asperiores illo sapiente. Unde asperiores ipsum soluta vel
-                aliquid quasi iure.
-              </p>
-            </div>
-          </div>
+        <div class="wrapper">
+        	<div class="mainFeaturesFlex1">
+	          <div class="customizedFlex">
+	            <div class="featuresText1">
+	              <div class="featuresIcon1">
+	                <i class="fas fa-home"></i>
+	              </div>
+	              <h2>CUSTOMIZED OFFERS</h2>
+	              <p>
+	                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+	                Delectus, minima cupiditate. Adipisci iusto maxime ea odio
+	                consequatur? Optio, autem? Vel!
+	              </p>
+	            </div>
+	            <div class="featuresText2">
+	              <div class="featuresIcon2">
+	                <i class="fas fa-users"></i>
+	              </div>
+	              <h2>BLOG</h2>
+	              <p>
+	                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+	                Impedit rem ex labore animi debitis excepturi iure iusto
+	                corporis tempore nobis?
+	              </p>
+	            </div>
+	          </div>
+	          <div class="communityFlex">
+	            <div class="featuresText3">
+	              <div class="featuresIcon3">
+	                <i class="fas fa-file"></i>
+	              </div>
+	              <h2>COMMUNITY</h2>
+	              <p>
+	                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+	                odio iusto doloremque ad omnis at recusandae nisi pariatur modi
+	                cum.
+	              </p>
+	            </div>
+	            <div class="featuresText4">
+	              <div class="featuresIcon4">
+	                <i class="fas fa-phone"></i>
+	              </div>
+	              <h2>GET IN TOUCH</h2>
+	              <p>
+	                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+	                asperiores illo sapiente. Unde asperiores ipsum soluta vel
+	                aliquid quasi iure.
+	              </p>
+	            </div>
+	          </div>
+	        </div>
         </div>
       </section>
       <section class="mainBenefits">
@@ -172,8 +178,22 @@
             </div>
           </div>
         </div>
-
-      </section>
-    </main>
+			</section>
+			<section class="mainStyleSearch">
+				<div>
+					<img src="../assets/banner-image.jpg" alt="Office reception couch and two pink chairs and a glass table.">
+				</div>
+				<div class="styleSearchFlex">
+					<div class="styleSearchText">
+						<h2>SEARCH BY STYLE</h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque autem fuga soluta quo quisquam nam culpa molestias placeat est dolorem vitae, id unde, quam pariatur?</p>
+						<div><a href="#"><h4>FIND OUT MORE</h4></a></div>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer>
+			<p>Copyright &#169; 2021 Juno</p>
+		</footer>
   </body>
 </html>
