--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<header>
+	<header class="blogHeader">
 
 		<div class="blogHeaderFlex">
 			<div class="blogHeaderNav">
@@ -29,7 +29,7 @@
 		<section class="blogSection">
 			<div class="blogPost">
 				<div>
-					<img src="../assets/blog-post-image.jpg" alt="Turquoise day bed.">
+					<img src="./assets/blog-post-image.jpg" alt="Turquoise day bed.">
 				</div>
 				<div class="blogText">
 					<h2>FINDING THE RIGHT PIECES FOR NEW SPACE</h2>
@@ -47,7 +47,7 @@
 				</div>
 			</div>
 			<div class="blogAside">
-				<div><img src="../assets/sidebar-image.jpg" alt="Geometric, copper light fixture"></div>
+				<div><img src="./assets/sidebar-image.jpg" alt="Geometric, copper light fixture"></div>
 				<div class="blogAsideText1">
 					<h3>OUR MISSION</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis similique ipsa optio.</p>
@@ -67,7 +67,7 @@
 			<div class="commentFlex">
 				<h3>COMMENTS:</h3>
 				<div class="commentBoxText1">
-					<div><img src="../assets/comment-image.jpg" alt="Portrait of a man."></div>
+					<div><img src="./assets/comment-image.jpg" alt="Portrait of a man."></div>
 
 					<p>TUESDAY OCTOBER 9TH, 2019 BY DAVIN</p>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid debitis rerum rem, amet, ad corrupti
@@ -75,7 +75,7 @@
 				</div>
 
 				<div class="commentBoxText2">
-					<div><img src="../assets/comment-image2.jpg" alt="Two zebras"></div>
+					<div><img src="./assets/comment-image2.jpg" alt="Two zebras"></div>
 
 					<p>WEDNESDAY OCTOBER 10TH, 2019 BY LISA</p>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid debitis rerum rem, amet, ad corrupti
@@ -87,20 +87,21 @@
       <div class="blogForm">
         <form action="submit">
           <fieldset class="blogFormFlex">
-            <div class="formFlex1">
-              <label for="name">Name</label>
-              <input type="text" placeholder="NAME" name="name" id="name" class="name">
+            <legend class="sr-only">Comment Form</legend>
+              <div class="formFlex1">
+                <label for="name">Name</label>
+                <input type="text" placeholder="NAME" name="name" id="name" class="name">
 
-              <label for="email">Email Address</label>
-              <input type="email" placeholder="EMAIL ADDRESS" name="email" id="email" class="email">
-            </div>
-            <div class="formFlex2">
-              <label for="comment">Comment</label>
-              <textarea name="comment" id="comment" class="comment" cols="30" rows="10"></textarea>
-              <button>
-                <h4>POST COMMENT</h4>
-              </button>
-            </div>
+                <label for="email">Email Address</label>
+                <input type="email" placeholder="EMAIL ADDRESS" name="email" id="email" class="email">
+              </div>
+              <div class="formFlex2">
+                <label for="comment">Comment</label>
+                <textarea name="comment" id="comment" class="comment" cols="30" rows="10"></textarea>
+                <button>
+                  <h4>POST COMMENT</h4>
+                </button>
+              </div>
           </fieldset>
         </form>
       </div>
