--- a/index.html
+++ b/index.html
@@ -1,199 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sanctuary Helpers</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
-    <script
-      src="https://kit.fontawesome.com/412d33e412.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
 
-  <body>
-    <header class="mainHeader">
-      <div class="wrapper">
-        <div class="mainHeaderNavFlex">
-          <nav class="mainHeaderNav">
-            <ul>
-              <li><a href="#home">HOME</a></li>
-              <li><a href="#about">ABOUT</a></li>
-              <li><a href="#blog">BLOG</a></li>
-              <li><a href="#contact">CONTACT</a></li>
-            </ul>
-          </nav>
-        </div>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Sanctuary Helpers</title>
+	<link rel="stylesheet" href="./styles/styles.css" />
+	<script src="https://kit.fontawesome.com/412d33e412.js" crossorigin="anonymous"></script>
+</head>
 
-        <div class="mainHeaderImageFlex">
-          <h1>sanctuary helpers</h1>
-          <div>
-            <img
-              src="../assets/header-box.png"
-              alt="Two blue velvet chairs, one with a pillow on hardwood floor."
-            />
-          </div>
-        </div>
-      </div>
-    </header>
+<body>
+	<header class="mainHeader">
+		<div class="wrapper">
+			<div class="mainHeaderNavFlex">
+				<nav class="mainHeaderNav">
+					<ul>
+						<li><a href="#home">HOME</a></li>
+						<li><a href="#about">ABOUT</a></li>
+						<li><a href="#blog">BLOG</a></li>
+						<li><a href="#contact">CONTACT</a></li>
+					</ul>
+				</nav>
+			</div>
 
-    <main class="homeMain">
-      <section class="materials">
-       <div class="wrapper">
-       	 <div class="materialsFlex">
-	          <div class="materialsText">
-	            <h2>DISCOVERING NEW MATERIALS</h2>
-	            <p>
-	              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-	              Praesentium, repellendus saepe ab numquam cum, aut corrupti rerum
-	              itaque consequatur culpa dolores, voluptates ipsam necessitatibus
-	              quas.
-	            </p>
-	            <div class="materialsLink">
-	              <a href="#">
-	                <h4>FIND OUT MORE</h4>
-	              </a>
-	            </div>
-	          </div>
-	          <div class="materialsImage">
-	            <img
-	              src="../assets/small-box.jpg"
-	              alt="Staged living room with a grey couch, abstract painting on the wall behind and a lamp that is turned on."
-	            />
-	          </div>
-	        </div>
-       </div>
-      </section>
-      <section class="mainImages">
-       <div class="wrapper">
-       	 <div class="mainImagesFlex">
-	          <div>
-	            <img
-	              src="../assets/gallery-image-1.jpg"
-	              alt="Green dresser with a brown vase with dried flowers and small framed art."
-	            />
-	          </div>
-	          <div>
-	            <img
-	              src="../assets/gallery-image-2.jpg"
-	              alt="Orange sofa with decorative throw pillows and a brown wooden coffee table with magazines on top."
-	            />
-	          </div>
-	          <div>
-	            <img
-	              src="../assets/gallery-image-3.jpg"
-	              alt="Designer patio chair."
-	            />
-	          </div>
-	        </div>
-       </div>
-      </section>
-      <section class="mainFeatures">
-        <div class="wrapper">
-        	<div class="mainFeaturesFlex1">
-	          <div class="customizedFlex">
-	            <div class="featuresText1">
-	              <div class="featuresIcon1">
-	                <i class="fas fa-home"></i>
-	              </div>
-	              <h2>CUSTOMIZED OFFERS</h2>
-	              <p>
-	                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-	                Delectus, minima cupiditate. Adipisci iusto maxime ea odio
-	                consequatur? Optio, autem? Vel!
-	              </p>
-	            </div>
-	            <div class="featuresText2">
-	              <div class="featuresIcon2">
-	                <i class="fas fa-users"></i>
-	              </div>
-	              <h2>BLOG</h2>
-	              <p>
-	                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-	                Impedit rem ex labore animi debitis excepturi iure iusto
-	                corporis tempore nobis?
-	              </p>
-	            </div>
-	          </div>
-	          <div class="communityFlex">
-	            <div class="featuresText3">
-	              <div class="featuresIcon3">
-	                <i class="fas fa-file"></i>
-	              </div>
-	              <h2>COMMUNITY</h2>
-	              <p>
-	                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
-	                odio iusto doloremque ad omnis at recusandae nisi pariatur modi
-	                cum.
-	              </p>
-	            </div>
-	            <div class="featuresText4">
-	              <div class="featuresIcon4">
-	                <i class="fas fa-phone"></i>
-	              </div>
-	              <h2>GET IN TOUCH</h2>
-	              <p>
-	                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-	                asperiores illo sapiente. Unde asperiores ipsum soluta vel
-	                aliquid quasi iure.
-	              </p>
-	            </div>
-	          </div>
-	        </div>
-        </div>
-      </section>
-      <section class="mainBenefits">
-        <div class="benefitsFlexContainer1">
-          <div class="benefitsImage1">
-            <img
-              src="../assets/left-image.jpg"
-              alt="A bonsai tree sitting on a table, with three white angular chairs partially tucked under the table."/>
-          </div>
-          <div class="benefitsText1">
-            <h2>GROUP PROGRAMS</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Recusandae corporis nobis voluptate porro laborum. In doloremque
-              sit ratione, corrupti cumque tempora reprehenderit blanditiis quam
-              earum ut, ullam suscipit, deleniti ab.
-            </p>
-            <div>
-              <a href="#"><h4>READ MORE</h4></a>
-            </div>
-          </div>
-        </div>
-        <div class="benefitsFlexContainer2">
-          <div class="benefitsImage2">
-            <img
-              src="../assets/right-image.jpg"
-              alt="Wicker patio chairs by a pool."/>
-          </div>
-          <div class="benefitsText2">
-            <h2>NEW LOCATIONS</h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit hic, pariatur velit blanditiis perspiciatis fugiat tempora ducimus numquam, voluptatibus esse magni dolores id rem? Dolorem ex sunt nam rerum quas!
-            </p>
-            <div>
-              <a href="#"><h4>READ MORE</h4></a>
-            </div>
-          </div>
-        </div>
-			</section>
-			<section class="mainStyleSearch">
+			<div class="mainHeaderImageFlex">
+				<h1>sanctuary helpers</h1>
 				<div>
-					<img src="../assets/banner-image.jpg" alt="Office reception couch and two pink chairs and a glass table.">
+					<img src="../assets/header-box.png" alt="Two blue velvet chairs, one with a pillow on hardwood floor." />
 				</div>
-				<div class="styleSearchFlex">
-					<div class="styleSearchText">
-						<h2>SEARCH BY STYLE</h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque autem fuga soluta quo quisquam nam culpa molestias placeat est dolorem vitae, id unde, quam pariatur?</p>
-						<div><a href="#"><h4>FIND OUT MORE</h4></a></div>
+			</div>
+		</div>
+	</header>
+
+	<main class="homeMain">
+		<section class="materials">
+			<div class="wrapper">
+				<div class="materialsFlex">
+					<div class="materialsText">
+						<h2>DISCOVERING NEW MATERIALS</h2>
+						<p>
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+							Praesentium, repellendus saepe ab numquam cum, aut corrupti rerum
+							itaque consequatur culpa dolores, voluptates ipsam necessitatibus
+							quas.
+						</p>
+						<div class="materialsLink">
+							<a href="#">
+								<h4>FIND OUT MORE</h4>
+							</a>
+						</div>
+					</div>
+					<div class="materialsImage">
+						<img src="../assets/small-box.jpg"
+							alt="Staged living room with a grey couch, abstract painting on the wall behind and a lamp that is turned on." />
 					</div>
 				</div>
-			</section>
-		</main>
-		<footer>
-			<p>Copyright &#169; 2021 Juno</p>
-		</footer>
-  </body>
+			</div>
+		</section>
+		<section class="mainImages">
+			<div class="wrapper">
+				<div class="mainImagesFlex">
+					<div>
+						<img src="../assets/gallery-image-1.jpg"
+							alt="Green dresser with a brown vase with dried flowers and small framed art." />
+					</div>
+					<div>
+						<img src="../assets/gallery-image-2.jpg"
+							alt="Orange sofa with decorative throw pillows and a brown wooden coffee table with magazines on top." />
+					</div>
+					<div>
+						<img src="../assets/gallery-image-3.jpg" alt="Designer patio chair." />
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="mainFeatures">
+			<div class="wrapper">
+				<div class="mainFeaturesFlex1">
+					<div class="customizedFlex">
+						<div class="featuresText1">
+							<div class="featuresIcon1">
+								<i class="fas fa-home"></i>
+							</div>
+							<h2>CUSTOMIZED OFFERS</h2>
+							<p>
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Delectus, minima cupiditate. Adipisci iusto maxime ea odio
+								consequatur? Optio, autem? Vel!
+							</p>
+						</div>
+						<div class="featuresText2">
+							<div class="featuresIcon2">
+								<i class="fas fa-users"></i>
+							</div>
+							<h2>BLOG</h2>
+							<p>
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+								Impedit rem ex labore animi debitis excepturi iure iusto
+								corporis tempore nobis?
+							</p>
+						</div>
+					</div>
+					<div class="communityFlex">
+						<div class="featuresText3">
+							<div class="featuresIcon3">
+								<i class="fas fa-file"></i>
+							</div>
+							<h2>COMMUNITY</h2>
+							<p>
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+								odio iusto doloremque ad omnis at recusandae nisi pariatur modi
+								cum.
+							</p>
+						</div>
+						<div class="featuresText4">
+							<div class="featuresIcon4">
+								<i class="fas fa-phone"></i>
+							</div>
+							<h2>GET IN TOUCH</h2>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+								asperiores illo sapiente. Unde asperiores ipsum soluta vel
+								aliquid quasi iure.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="mainBenefits">
+			<div class="benefitsFlexContainer1">
+				<div class="benefitsImage1">
+					<img src="../assets/left-image.jpg"
+						alt="A bonsai tree sitting on a table, with three white angular chairs partially tucked under the table." />
+				</div>
+				<div class="benefitsText1">
+					<h2>GROUP PROGRAMS</h2>
+					<p>
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+						Recusandae corporis nobis voluptate porro laborum. In doloremque
+						sit ratione, corrupti cumque tempora reprehenderit blanditiis quam
+						earum ut, ullam suscipit, deleniti ab.
+					</p>
+					<div>
+						<a href="#">
+							<h4>READ MORE</h4>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="benefitsFlexContainer2">
+				<div class="benefitsImage2">
+					<img src="../assets/right-image.jpg" alt="Wicker patio chairs by a pool." />
+				</div>
+				<div class="benefitsText2">
+					<h2>NEW LOCATIONS</h2>
+					<p>
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit hic, pariatur velit blanditiis perspiciatis
+						fugiat tempora ducimus numquam, voluptatibus esse magni dolores id rem? Dolorem ex sunt nam rerum quas!
+					</p>
+					<div>
+						<a href="#">
+							<h4>READ MORE</h4>
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="mainStyleSearch">
+			<div>
+				<img src="../assets/banner-image.jpg" alt="Office reception couch and two pink chairs and a glass table.">
+			</div>
+			<div class="styleSearchFlex">
+				<div class="styleSearchText">
+					<h2>SEARCH BY STYLE</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque autem fuga soluta quo quisquam nam culpa
+						molestias placeat est dolorem vitae, id unde, quam pariatur?</p>
+					<div><a href="#">
+							<h4>FIND OUT MORE</h4>
+						</a></div>
+				</div>
+			</div>
+		</section>
+	</main>
+	<footer>
+		<p>Copyright &#169; 2021 Juno</p>
+	</footer>
+</body>
+
 </html>
