added general styles and worked on home page header

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
 
         <div class="mainHeaderImageFlex">
           <h1>sanctuary helpers</h1>
-          <div>
+          <div class="mainHeaderImage">
             <img
               src="./assets/header-box.png"
-              alt="Two blue velvet chairs, one with a pillow on hardwood floor."
-            />
+              alt="Two blue velvet chairs, one with a pillow on hardwood floor."/>
           </div>
         </div>
       </div>
