further styling on main page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 Praesentium, repellendus saepe ab numquam cum, aut corrupti
                 rerum itaque consequatur culpa dolores, voluptates ipsam
                 necessitatibus quas.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur cumque, aspernatur temporibus iusto ea sunt similique voluptatibus doloribus nemo repellendus.
               </p>
               <div class="materialsLink">
                 <a href="#">
