added materials section and finished main images

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 necessitatibus quas.
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur cumque, aspernatur temporibus iusto ea sunt similique voluptatibus doloribus nemo repellendus.
               </p>
-              <div class="materialsLink">
-                <a href="#">
+             
+                <a href="#" class="linkButton">
                   <h4>FIND OUT MORE</h4>
                 </a>
-              </div>
+              
             </div>
             <div class="materialsImage">
               <img
@@ -67,19 +67,19 @@
       <section class="mainImages">
         <div class="wrapper">
           <div class="mainImagesFlex">
-            <div>
+            <div class="mainImageContainer">
               <img
                 src="./assets/gallery-image-1.jpg"
                 alt="Green dresser with a brown vase with dried flowers and small framed art."
               />
             </div>
-            <div>
+            <div class="mainImageContainer">
               <img
                 src="./assets/gallery-image-2.jpg"
                 alt="Orange sofa with decorative throw pillows and a brown wooden coffee table with magazines on top."
               />
             </div>
-            <div>
+            <div class="mainImageContainer">
               <img
                 src="./assets/gallery-image-3.jpg"
                 alt="Designer patio chair."
