added feature section

--- a/index.html
+++ b/index.html
@@ -93,50 +93,62 @@
           <div class="mainFeaturesFlex1">
             <div class="customizedFlex">
               <div class="featuresText1">
-                <div class="featuresIcon1">
+                <div class="featuresIcon">
+                  <div class="iconBackground"></div>
                   <i class="fas fa-home"></i>
                 </div>
-                <h2>CUSTOMIZED OFFERS</h2>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Delectus, minima cupiditate. Adipisci iusto maxime ea odio
-                  consequatur? Optio, autem? Vel!
-                </p>
+                <div class="iconText">
+                  <h2>CUSTOMIZED OFFERS</h2>
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Delectus, minima cupiditate. Adipisci iusto maxime ea odio
+                    consequatur? Optio, autem? Vel!
+                  </p>
+                </div>  
               </div>
               <div class="featuresText2">
-                <div class="featuresIcon2">
+                <div class="featuresIcon">
+                  <div class="iconBackground"></div>
                   <i class="fas fa-users"></i>
                 </div>
-                <h2>BLOG</h2>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Impedit rem ex labore animi debitis excepturi iure iusto
-                  corporis tempore nobis?
-                </p>
+                <div class="iconText">
+                  <h2>BLOG</h2>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Impedit rem ex labore animi debitis excepturi iure iusto
+                    corporis tempore nobis?
+                  </p>
+                </div>
               </div>
             </div>
             <div class="communityFlex">
               <div class="featuresText3">
-                <div class="featuresIcon3">
+                <div class="featuresIcon">
+                  <div class="iconBackground"></div>
                   <i class="fas fa-file"></i>
                 </div>
-                <h2>COMMUNITY</h2>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
-                  odio iusto doloremque ad omnis at recusandae nisi pariatur
-                  modi cum.
-                </p>
+                <div class="iconText">
+                  <h2>COMMUNITY</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+                    odio iusto doloremque ad omnis at recusandae nisi pariatur
+                    modi cum.
+                  </p>
+                </div>
               </div>
               <div class="featuresText4">
-                <div class="featuresIcon4">
+                <div class="featuresIcon">
+                  <div class="iconBackground"></div>
                   <i class="fas fa-phone"></i>
                 </div>
-                <h2>GET IN TOUCH</h2>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-                  asperiores illo sapiente. Unde asperiores ipsum soluta vel
-                  aliquid quasi iure.
-                </p>
+                <div class="iconText">
+                  <h2>GET IN TOUCH</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+                    asperiores illo sapiente. Unde asperiores ipsum soluta vel
+                    aliquid quasi iure.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
