added some more styles to blog

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       </section>
       <div class="styleSearchImage">
         <img
-          src="../sanctuaryHelpersProjectOne/assets/banner-image.jpg"
+          src="./assets/banner-image.jpg"
           alt="Office space with pink chairs and orange couch."
         />
       </div>
