--- a/blog.html
+++ b/blog.html
@@ -34,28 +34,46 @@
           <div class="blogImage">
             <img src="./assets/blog-post-image.jpg" alt="Turquoise day bed." />
           </div>
-          <div class="blogText">
-            <h2>FINDING THE RIGHT PIECES FOR NEW SPACE</h2>
-            <p>Monday, October 5th, 2019 by <span>Saron</span></p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
-              nostrum ipsa, molestias quod, alias est repudiandae natus non
-              impedit pariatur consectetur aperiam minus iure sit mollitia quo
-              necessitatibus quis cum? Eum ab nulla voluptas odit minima maiores
-              similique earum deserunt a! Officia suscipit esse velit pariatur,
-              facilis fugit quasi unde architecto iusto porro provident
-              perferendis ullam vel, molestias natus autem. Beatae explicabo sit
-              saepe asperiores dignissimos soluta rerum a ut quod rem fuga
-              impedit debitis consequatur mollitia obcaecati tenetur at ab
-              deleniti quia ea iure, neque delectus odio. Eius, voluptatibus!
-              Officia, magni quibusdam! Fuga repudiandae adipisci ratione
-              voluptates impedit libero facilis reprehenderit placeat! Quos
-              mollitia reiciendis quisquam, possimus dolor iure deserunt rem
-              illum temporibus vel nostrum! Ratione blanditiis aliquid
-              laboriosam.
-            </p>
+         <div class="blogTextContainer">
+            <div class="blogText">
+              <h2>FINDING THE RIGHT PIECES FOR NEW SPACE</h2>
+              <p>Monday, October 5th, 2019 by <span>Saron</span></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                nostrum ipsa, molestias quod, alias est repudiandae natus non
+                impedit pariatur consectetur aperiam minus iure sit mollitia quo
+                necessitatibus quis cum? Eum ab nulla voluptas odit minima maiores
+                similique earum deserunt a! Officia suscipit esse velit pariatur,
+                facilis fugit quasi unde architecto iusto porro provident
+                perferendis ullam vel, molestias natus autem. Beatae explicabo sit.
+              </p>
+               <p>
+                  Saepe asperiores dignissimos soluta rerum a ut quod rem fuga
+                  impedit debitis consequatur mollitia obcaecati tenetur at ab
+                  deleniti quia ea iure, neque delectus odio. Eius, voluptatibus!
+                  Officia, magni quibusdam! Fuga repudiandae adipisci ratione
+                  voluptates impedit libero facilis reprehenderit placeat! Quos
+                  mollitia reiciendis quisquam, possimus dolor iure deserunt rem
+                  illum temporibus vel nostrum! Ratione blanditiis aliquid
+                  laboriosam.
+                
+               </p>
+               <p>
+                  Facilis fugit quasi unde architecto iusto porro provident
+                  perferendis ullam vel, molestias natus autem. Beatae explicabo sit
+                  saepe asperiores dignissimos soluta rerum a ut quod rem fuga
+                  impedit debitis consequatur mollitia obcaecati tenetur at ab
+                  deleniti quia ea iure, neque delectus odio. Eius, voluptatibus!
+                  Officia, magni quibusdam! Fuga repudiandae adipisci ratione
+                  voluptates impedit libero facilis reprehenderit placeat! Quos
+                  mollitia reiciendis quisquam, possimus dolor iure deserunt rem
+                  illum temporibus vel nostrum! Ratione blanditiis aliquid
+                  laboriosam.
+               </p>
+              
+            </div>
           </div>
-        </div>
+         </div>
         <div class="blogAside">
           <div>
             <img
@@ -83,34 +101,36 @@
       </section>
       <section class="comments">
         <div class="commentFlex">
-          <h3>COMMENTS:</h3>
-          <div class="commentBoxText1">
-            <div>
-              <img src="./assets/comment-image.jpg" alt="Portrait of a man." />
+         <div class="commentContainer">
+            <h3>COMMENTS:</h3>
+            <div class="commentBoxText1">
+              <div>
+                <img src="./assets/comment-image.jpg" alt="Portrait of a man."/>
+              </div>
+  
+              <p>TUESDAY OCTOBER 9TH, 2019 BY DAVIN</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+                debitis rerum rem, amet, ad corrupti provident, non earum eos quos
+                fugiat aperiam eum eaque cupiditate. Veniam natus temporibus
+                dolores sit?
+              </p>
             </div>
-
-            <p>TUESDAY OCTOBER 9TH, 2019 BY DAVIN</p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
-              debitis rerum rem, amet, ad corrupti provident, non earum eos quos
-              fugiat aperiam eum eaque cupiditate. Veniam natus temporibus
-              dolores sit?
-            </p>
-          </div>
-
-          <div class="commentBoxText2">
-            <div>
-              <img src="./assets/comment-image2.jpg" alt="Two zebras" />
+  
+            <div class="commentBoxText2">
+              <div>
+                <img src="./assets/comment-image2.jpg" alt="Two zebras" />
+              </div>
+  
+              <p>WEDNESDAY OCTOBER 10TH, 2019 BY LISA</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+                debitis rerum rem, amet, ad corrupti provident, non earum eos quos
+                fugiat aperiam eum eaque cupiditate. Veniam natus temporibus
+                dolores sit?
+              </p>
             </div>
-
-            <p>WEDNESDAY OCTOBER 10TH, 2019 BY LISA</p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
-              debitis rerum rem, amet, ad corrupti provident, non earum eos quos
-              fugiat aperiam eum eaque cupiditate. Veniam natus temporibus
-              dolores sit?
-            </p>
-          </div>
+         </div>
         </div>
       </section>
       <section class="form">
