added blog styles

--- a/blog.html
+++ b/blog.html
@@ -103,32 +103,36 @@
         <div class="commentFlex">
          <div class="commentContainer">
             <h3>COMMENTS:</h3>
-            <div class="commentBoxText1">
-              <div>
+            <div class="commentBoxText">
+              <div class="commentImageFlex">
                 <img src="./assets/comment-image.jpg" alt="Portrait of a man."/>
               </div>
-  
-              <p>TUESDAY OCTOBER 9TH, 2019 BY DAVIN</p>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
-                debitis rerum rem, amet, ad corrupti provident, non earum eos quos
-                fugiat aperiam eum eaque cupiditate. Veniam natus temporibus
-                dolores sit?
-              </p>
+              
+              <div class="commentTextFlex">
+                <p>TUESDAY OCTOBER 9TH, 2019 BY DAVIN</p>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+                  debitis rerum rem, amet, ad corrupti provident, non earum eos quos
+                  fugiat aperiam eum eaque cupiditate. Veniam natus temporibus
+                  dolores sit?
+                </p>
+              </div>
             </div>
   
-            <div class="commentBoxText2">
-              <div>
+            <div class="commentBoxText">
+              <div class="commentImageFlex">
                 <img src="./assets/comment-image2.jpg" alt="Two zebras" />
               </div>
-  
-              <p>WEDNESDAY OCTOBER 10TH, 2019 BY LISA</p>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
-                debitis rerum rem, amet, ad corrupti provident, non earum eos quos
-                fugiat aperiam eum eaque cupiditate. Veniam natus temporibus
-                dolores sit?
-              </p>
+              
+              <div class="commentTextFlex">
+                <p>WEDNESDAY OCTOBER 10TH, 2019 BY LISA</p>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+                  debitis rerum rem, amet, ad corrupti provident, non earum eos quos
+                  fugiat aperiam eum eaque cupiditate. Veniam natus temporibus
+                  dolores sit?
+                </p>
+              </div>
             </div>
          </div>
         </div>
