finished blog styles

--- a/blog.html
+++ b/blog.html
@@ -140,12 +140,12 @@
             <div class="formFlex1">
               <div class="nameFlex">
                 <label for="name" class="name">Name</label>
-                <input type="text" placeholder="NAME" name="name" id="name" class="name" />
+                <input type="text" name="name" id="name" class="name" />
               </div>
 
               <div class="emailFlex">
                 <label for="email" class="email">Email Address</label>
-                <input type="email" placeholder="EMAIL ADDRESS" name="email" id="email" class="email" />
+                <input type="email" name="email" id="email" class="email" />
               </div>
             </div>
             <div class="formFlex2">
