started media queries

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div class="featuresText1">
                 <div class="featuresIcon">
                   <div class="iconBackground"></div>
-                  <i class="fas fa-home"></i>
+                  <i class="fas fa-home" aria-hidden="true"></i>
                 </div>
                 <div class="iconText">
                   <h2>CUSTOMIZED OFFERS</h2>
@@ -110,7 +110,7 @@
               <div class="featuresText2">
                 <div class="featuresIcon">
                   <div class="iconBackground"></div>
-                  <i class="fas fa-users"></i>
+                  <i class="fas fa-users" aria-hidden="true"></i>
                 </div>
                 <div class="iconText">
                   <h2>BLOG</h2>
@@ -126,7 +126,7 @@
               <div class="featuresText3">
                 <div class="featuresIcon">
                   <div class="iconBackground"></div>
-                  <i class="fas fa-file"></i>
+                  <i class="fas fa-file" aria-hidden="true"></i>
                 </div>
                 <div class="iconText">
                   <h2>COMMUNITY</h2>
@@ -140,7 +140,7 @@
               <div class="featuresText4">
                 <div class="featuresIcon">
                   <div class="iconBackground"></div>
-                  <i class="fas fa-phone"></i>
+                  <i class="fas fa-phone" aria-hidden="true"></i>
                 </div>
                 <div class="iconText">
                   <h2>GET IN TOUCH</h2>
