--- a/contact.html
+++ b/contact.html
@@ -79,11 +79,11 @@
           </form>
         </div>
         <div class="contactInfo">
-          <div class="socialIcons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
+          <div class="socialIcons" aria-label="Social media icons">
+            <a href="#"><i class="fab fa-facebook-f" aria-label="Facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram" aria-label="Instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter" aria-label="Twitter"></i></a>
+            <a href="#"><i class="fab fa-whatsapp" aria-label="Whatsapp"></i></a>
           </div>
           <p>info@email.com</p>
           <div class="address">
