added mobile nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <header class="mainHeader">
       <div class="wrapper">
         <div class="mainHeaderNavFlex">
+         
           <nav class="mainHeaderNav">
+            <label for="toggle">
+              <i class="fas fa-bars hamburgerMenu"></i>
+            </label>
+            <input id="toggle" name="toggle" type="checkbox" class="hamburgerMenu toggle sr-only">
             <ul>
               <li><a href="#home">HOME</a></li>
               <li><a href="#about">ABOUT</a></li>
