added media queries to home page

--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@
             <div class="benefitsText1">
               <h2>NEW LOCATIONS</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Recusandae corporis nobis voluptate porro laborum. In doloremque
-                sit ratione, corrupti cumque tempora.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet praesentium voluptatum odio explicabo mollitia sint molestiae saepe eos. Voluptate, nesciunt.
               </p>
 
               <a href="#" class="linkButton">
