added blog media queries

--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,10 @@
       <div class="blogHeaderNav">
         <h3 class="blogLogo">SANCTUARY HELPERS</h3>
         <nav>
+          <label for="toggle">
+              <i class="fas fa-bars hamburgerMenu"></i>
+            </label>
+            <input id="toggle" name="toggle" type="checkbox" class="hamburgerMenu toggle sr-only">
           <ul>
             <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
