added more mobile styles on blog, linked pages

--- a/blog.html
+++ b/blog.html
@@ -15,15 +15,15 @@
       <div class="blogHeaderNav">
         <h3 class="blogLogo">SANCTUARY HELPERS</h3>
         <nav>
-          <label for="toggle">
-              <i class="fas fa-bars hamburgerMenu"></i>
-            </label>
-            <input id="toggle" name="toggle" type="checkbox" class="hamburgerMenu toggle sr-only">
+          <label for="toggleBlog">
+            <i class="fas fa-bars hamburgerMenu"></i>
+          </label>
+          <input id="toggleBlog" name="toggleBlog" type="checkbox" class="sr-only">
           <ul>
-            <li><a href="#home">HOME</a></li>
+            <li><a href="./index.html">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
-            <li><a href="#blog">BLOG</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="./blog.html">BLOG</a></li>
+            <li><a href="./contact.html">CONTACT</a></li>
           </ul>
         </nav>
       </div>
@@ -154,7 +154,8 @@
             </div>
             <div class="formFlex2">
               <label for="comment" class="sr-only">Comment</label>
-              <textarea name="comment" id="comment" class="comment" cols="30" rows="10" placeholder="COMMENT"></textarea>
+              <textarea name="comment" id="comment" class="comment" cols="30" rows="10"
+                placeholder="COMMENT"></textarea>
               <button>
                 <h4>POST COMMENT</h4>
               </button>
