--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </label>
             <input id="toggle" name="toggle" type="checkbox" class="hamburgerMenu toggle sr-only">
             <ul>
-              <li><a href="#home">HOME</a></li>
+              <li><a href="./index.html">HOME</a></li>
               <li><a href="#about">ABOUT</a></li>
-              <li><a href="#blog">BLOG</a></li>
-              <li><a href="#contact">CONTACT</a></li>
+              <li><a href="./blog.html">BLOG</a></li>
+              <li><a href="./contact.html">CONTACT</a></li>
             </ul>
           </nav>
         </div>
