--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="blogBody">
+  <!-- Header Start -->
   <header class="blogHeader">
     <div class="blogHeaderFlex wrapper">
       <div class="blogHeaderNav">
@@ -30,7 +31,10 @@
       <h1>BLOG</h1>
     </div>
   </header>
+  <!-- Header end -->
   <main>
+
+    <!-- Blog Post Start -->
     <section class="blogSection">
       <div class="blogPost">
         <div class="blogImage">
@@ -76,6 +80,8 @@
           </div>
         </div>
       </div>
+      <!-- Blog Post End -->
+      <!-- Blog Aside Start -->
       <div class="blogAside">
         <div>
           <img src="./assets/sidebar-image.jpg" alt="Geometric, copper light fixture" />
@@ -98,6 +104,8 @@
         </div>
       </div>
     </section>
+    <!-- Blog Aside End -->
+    <!-- Blog Comments Start -->
     <section class="comments">
       <div class="commentFlex">
         <div class="commentContainer">
@@ -136,6 +144,8 @@
         </div>
       </div>
     </section>
+    <!-- Blog Comments End -->
+    <!-- Blog Comment Form Start -->
     <section class="form wrapper">
       <div class="blogForm">
         <form action="submit">
@@ -164,7 +174,9 @@
         </form>
       </div>
     </section>
+    <!-- Blog Comment Form End -->
   </main>
+  <!-- Footer -->
   <footer>
     <p>Copyright &#169; 2021 Juno</p>
   </footer>
