added link to logo

--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
   <header class="blogHeader">
     <div class="blogHeaderFlex wrapper">
       <div class="blogHeaderNav">
-        <h3 class="blogLogo">SANCTUARY HELPERS</h3>
+        <h3 class="blogLogo"><a href="./index.html">SANCTUARY HELPERS</a></h3>
         <nav>
           <label for="toggleBlog">
             <i class="fas fa-bars hamburgerMenu"></i>
