--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <header class="contactHeader">
       <div class="contactHeaderFlex wrapper">
         <div class="contactHeaderNav">
-          <h3 class="contactLogo">SANCTUARY HELPERS</h3>
+          <h3 class="contactLogo"><a href="./index.html">SANCTUARY HELPERS</a></h3>
           <nav>
             <label for="toggleBlog">
               <i class="fas fa-bars hamburgerMenu"></i>
